# snake

./: CMakeLists.txt  GameDrawer.cpp  GameDrawer.h  README.md  Snake.cpp  Snake.h  globals.h  main.cpp
area/: Area.cpp  Area.h  Field.cpp  Field.h
fieldObjects/: FieldObject.cpp  FieldObject.h  Food.cpp  Food.h  SnakeSegment.cpp  SnakeSegment.h  Wall.cpp  Wall.h
